--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <title>Mi sitio web</title>
+<link rel="stylesheet" href="C:\Users\ingbe\Dropbox\PC\Documents\Git Course\Proyecto empresa A\CSS\estios.css">
 </head>
 
 <body>
