--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-<title>Mi sitio web</title>
-<link rel="stylesheet" href="C:\Users\ingbe\Dropbox\PC\Documents\Git Course\Proyecto empresa A\CSS\estios.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/CSS/estilos.css">
+  <title>Document</title>
 </head>
-
 <body>
+  <h1>Esta es la primera Linea</h1>
 
-<h1>Titulo de la pagina<h1>
-
-<p>Un parrafo de prueba<p>
-  
-  <p>Parrafo agregado desde git<p>
-
+  <p>Este es el primer parrafo</p>
 </body>
-
 </html>
